--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.head.appendChild(metaTag);
 
 TRY YOUR LUCK ! 🚀
     ">
-<!--     <meta name="twitter:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif">  -->
+    <meta name="twitter:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif"> 
     <link rel="stylesheet" href="css/style.css">
 <script>
       document.addEventListener('DOMContentLoaded', function () {
